     * Add study function to miniflow function table which studies packet
       and automatically chooses the best miniflow implementation for that
       traffic.
     * Add build time configure command to enable auto-validatior as default
       miniflow implementation at build time.
     * Cache results for CPU ISA checks, reduces overhead on repeated lookups.
   - ovs-ctl:
     * New option '--no-record-hostname' to disable hostname configuration
       in ovsdb on startup.
     * New command 'record-hostname-if-not-set' to update hostname in ovsdb.
   - DPDK:
     * OVS validated with DPDK 20.11.1. It is recommended to use this version
       until further releases.
     * New debug appctl command 'dpdk/get-malloc-stats'.
     * Add hardware offload support for tunnel pop action (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
     * Add hardware offload support for VXLAN flows (experimental).
       Available only if DPDK experimantal APIs enabled during the build.
   - ovsdb-tool:
     * New option '--election-timer' to the 'create-cluster' command to set the
       leader election timer during cluster creation.
   - OVS now reports the datapath capability 'ct_zero_snat', which reflects
     whether the SNAT with all-zero IP address is supported.
     See ovs-vswitchd.conf.db(5) for details.

v2.15.0 - 15 Feb 2021
---------------------
   - OVSDB:
     * Changed format in which ovsdb transactions are stored in database files.
       Now each transaction contains diff of data instead of the whole new
       value of a column.
       New ovsdb-server process will be able to read old database format, but
       old processes will *fail* to read database created by the new one.
       For cluster and active-backup service models follow upgrade instructions
       in 'Upgrading from version 2.14 and earlier to 2.15 and later' section
       of ovsdb(7).